styling input and button

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,17 @@
 a {
     margin: 10px;
+    font-size: 16px;
+}
+input {
+    width: 300px;
+    font-size: 14px;
+}
+button {
+    margin-top: 10px;
+    font-size: 14px;
+    padding: 6px;
+    border-radius: 6px;
+    color: white;
+    background-color: green;
+    border-width: 0px;
 }
