--- a/views/home.pug
+++ b/views/home.pug
@@ -1,6 +1,7 @@
 html
   head
     script(src='js/home.js')
+    script(src='js/request.js')
   body
     button(onclick='getLikes()') get Likes
     button(onclick='getWallPosts()') get wall posts
