small refactor, added button to get repostsList

--- a/views/repost.pug
+++ b/views/repost.pug
@@ -9,7 +9,8 @@ html
       input#linkToPost
     div
       a ID группы
-      a#groupId
+      a#wallId
     div
       a ID поста
       a#postId
+    button#getReposts Получить список
