--- a/views/repost.pug
+++ b/views/repost.pug
@@ -1,6 +1,7 @@
 html
   head
     script(src='js/repost.js')
+    script(src='js/request.js')
     link(rel='stylesheet', type='text/css', href='css/home.css')
   body
     h1 Получение списка всех репостнувших с данными о количестве друзей и подписчиков
