--- a/views/repost.pug
+++ b/views/repost.pug
@@ -14,4 +14,5 @@ html
     div
       a ID поста
       a#postId
-    button#getReposts Получить список
+    button#addWallpost внести в базу
+    div#status
