just link to reposts page

--- a/views/home.pug
+++ b/views/home.pug
@@ -1,10 +1,3 @@
 html
-  head
-    script(src='js/home.js')
-    script(src='js/request.js')
   body
-    button(onclick='getLikes()') get Likes
-    button(onclick='getWallPosts()') get wall posts
-    button(onclick='getViewsCounter()') get views counter
-    h4#methodName
-    p#methodBody
+    a(href="/repost") Going to reposts page
